# ton-rust-node

./: .gitignore  CHANGELOG.md  README.md  RELEASE.md
src/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.nodectl  Makefile  README.md  audit.toml  rustfmt.toml
src/.cargo/: audit.toml
src/adnl/: Cargo.toml  README.md
src/adnl/benches/: bench_rldp.rs
src/adnl/raptorq/: Cargo.toml
src/adnl/src/: lib.rs
src/adnl/tests/: test_adnl.rs  test_decode.rs  test_dht.rs  test_key.rs  test_overlay.rs  test_quic.rs  test_real_dht_data.rs  test_rldp.rs  test_tcp.rs  test_telemetry.rs  test_udp.rs  test_utils.rs
src/assembler/: Cargo.toml  README.md  build.rs
src/assembler/src/: complex.rs  convert.rs  debug.rs  errors.rs  lib.rs  macros.rs  parse.rs  simple.rs  writer.rs
src/block/: Cargo.toml  README.md  boc_improved_compression.md  build.rs
src/block-json/: Cargo.toml  README.md
src/block-json/src/: deserialize.rs  lib.rs  serialize.rs
src/block/benches/: benchmarks.rs
src/block/fuzz/: .gitignore  Cargo.toml  README.md
src/block/src/: accounts.rs  bintree.rs  blocks.rs  bls.rs  boc.rs  boc_compression.rs  config_params.rs  crypto.rs  envelope_message.rs  error.rs  inbound_messages.rs  lib.rs  master.rs  merkle_proof.rs  merkle_update.rs  messages.rs  miscellaneous.rs  out_actions.rs  outbound_messages.rs  shard.rs  shard_accounts.rs  signature.rs  storage_stat.rs  transactions.rs  types.rs  validators.rs  wrappers.rs  xp25.rs
src/ci/sync-test/: README.md  gen-node-config.sh  values.yaml  watcher.sh
src/common/: README.md
src/common/config/: log_cfg.yml  log_cfg_debug.yml
src/common/src/: config.rs  info.rs  log.rs  test.rs
src/docs/: console.md
src/emulator/: Cargo.toml
src/emulator/src/: lib.rs
src/executor/: Cargo.toml  README.md
src/executor/benches/: benchmarks.rs
src/executor/real_boc/: action_result_arg_account_new.boc  action_result_arg_transaction.boc  bad_action_account_new.boc  bad_action_account_old.boc  bad_action_transaction.boc  bad_action_with_ignore_flag_account_new.boc  bad_action_with_ignore_flag_account_old.boc  bad_action_with_ignore_flag_transaction.boc  body_with_pruned_cell_account_new.boc  body_with_pruned_cell_transaction.boc  bounce_message_to_new_account_account_new.boc  bounce_message_to_new_account_transaction.boc  bounce_msg_account_new.boc  bounce_msg_transaction.boc  bounce_to_empty_account_new.boc  bounce_to_empty_transaction.boc  bounce_to_low_balance_account_new.boc  bounce_to_low_balance_transaction.boc  config.boc  config.json  config10.boc  config12.boc  config13.boc  count_steps_acc_new.boc  count_steps_tx.boc  deploy_account_new.boc  deploy_fixed_prefix_account_new.boc  deploy_fixed_prefix_transaction.boc  deploy_transaction.boc  depool_balance_check_account_new.boc  depool_balance_check_transaction.boc  due_payment_in_smc_account_new.boc  due_payment_in_smc_account_old.boc  due_payment_in_smc_transaction.boc  exit_arg_on_success_account_new.boc  exit_arg_on_success_account_old.boc  exit_arg_on_success_transaction.boc  freeze_transaction.boc  fwd_fee_payment_in_smc_account_new.boc  fwd_fee_payment_in_smc_account_old.boc  (+84 more)
src/executor/src/: blockchain_config.rs  error.rs  lib.rs  ordinary_transaction.rs  tick_tock_transaction.rs  transaction_executor.rs
src/lockfree/: CONTRIBUTING.md  Cargo.toml
src/lockfree/src/: incin.rs  ptr.rs  queue.rs  removable.rs  set.rs  stack.rs
src/node/: Cargo.toml
src/node-control/: CHANGELOG.md  Makefile  README.md  build-nodectl-config.sh  update_control_clients.sh
src/node-control/commands/: Cargo.toml
src/node-control/common/: Cargo.toml
src/node-control/contracts/: Cargo.toml
src/node-control/control-client/: Cargo.toml
src/node-control/docs/: audit-log.md  contracts-automation.md  hcp-vault-setup.md  nodectl-policy.hcl  nodectl-security.md  nodectl-setup.md  singlehost-vault-setup.md  staking-strategies.md
src/node-control/elections/: Cargo.toml
src/node-control/nodectl/: Cargo.toml
src/node-control/service/: Cargo.toml
src/node-control/ton-http-api-client/: Cargo.toml
src/node/benches/: liteserver_pipeline.rs
src/node/catchain/: Cargo.toml  README.md
src/node/configs/: default_config.json  default_config_localhost.json
src/node/consensus-common/: CHANGELOG.md  Cargo.toml  README.md
src/node/simplex/: CHANGELOG.md  Cargo.toml  README.md
src/node/src/: block.rs  block_proof.rs  boot.rs  collator_test_bundle.rs  config.rs  confirmed_blocks.rs  engine.rs  engine_operations.rs  engine_traits.rs  error.rs  ext_messages.rs  lib.rs  macros.rs  main.rs  shard_blocks.rs  shard_blocks_intershard.rs  shard_state.rs  shard_states_keeper.rs  sync.rs  validating_utils.rs
src/node/storage/: Cargo.toml
src/node/tests/: setup_test_paths.sh
src/node/validator-session/: ACCELERATED_CONSENSUS.md  Cargo.toml  README.md
src/secrets-vault/: Cargo.toml  FILE-JSON-STORAGE_V2.md  README.md
src/secrets-vault/cli/: COPY_FILE_TO_HASHICORP.md  README.md  copy.rs  copy_file_to_hashicorp.rs  delete.rs  generate.rs  get.rs  import.rs  init.rs  list.rs  main.rs  migrate.rs  sign.rs  utils.rs  verify.rs
src/secrets-vault/src/: lib.rs  vault.rs  vault_block.rs  vault_builder.rs
src/tl/: README.md
src/tl/ton_api/: Cargo.toml  build.rs
src/tl/ton_tl_codegen/: Cargo.toml
src/vm/: Cargo.toml  README.md
src/vm/benches/: benchmarks.rs
src/vm/src/: error.rs  lib.rs  smart_contract_info.rs  utils.rs
src/vm/tests/: test_app_specific.rs  test_assembler_executor.rs  test_binary_operations.rs  test_bls.rs  test_cell_deserialization.rs  test_cell_serialization.rs  test_compound_stack_manipulation_primitives.rs  test_config.rs  test_constant_primitives.rs  test_cont.rs  test_control_flow.rs  test_control_flow_condition.rs  test_currency.rs  test_dictionary.rs  test_dictionary_special_get.rs  test_dump.rs  test_exceptions.rs  test_exotic_stack_manipulation_primitives.rs  test_gas.rs  test_integer_arithmetic.rs  test_integer_arithmetic_division.rs  test_integer_comparisons.rs  test_library.rs  test_null.rs  test_other_comparison_operations.rs  (+5 more)
(+907 files in other folders)
