[workspace]
members = [
    'adnl',
    'assembler',
    'block',
    'block-json',
    'executor',
    'emulator',
    'lockfree',
    'node',
    'node/catchain',
    'node/consensus-common',
    'node/simplex',
    'node/storage',
    'node/tests/compat_test',
    'node/validator-session',
    'node-control/commands',
    'node-control/common',
    'node-control/contracts',
    'node-control/control-client',
    'node-control/nodectl', 
    'node-control/service',
    'node-control/ton-http-api-client',
    'secrets-vault',
    'tl/ton_api',
    'vm',
]
resolver = '2'

[profile.bench]
debug = true

#Uncomment for profiling
#[profile.release]
#debug = 1
