[package]
build = '../common/build/build.rs'
edition = '2021'
license = 'GPL-3.0'
name = 'ton_block_json'
version = '0.9.41'

[dependencies]
anyhow = '1.0'
hex = '0.4'
log = '^0.4'
metrics = '0.24'
num = '0.4'
num-traits = '0.2'
serde = '1.0'
serde_derive = '1.0'
serde_json = { features = [ 'preserve_order' ], version = '1.0' }
thiserror = '1.0'
ton_block = { path = '../block' }
ton_api = { path = '../tl/ton_api' }

[dev-dependencies]
pretty_assertions = '1.4'
