[package]
build = '../common/build/build.rs'
edition = "2021"
license = 'GPL-3.0'
name = "emulator"
version = "0.1.0"

[lib]
name = "emulator"
crate-type = ["cdylib"]

[dependencies]
anyhow = '1.0'
log = '0.4'
log4rs = '1.2'
serde_json = '1.0'
thiserror = '1.0'
ton_block = { path = '../block' }
ton_block_json = { path = '../block-json' }
ton_executor = { path = '../executor' }
ton_vm = { path = '../vm' }
