[package]
build = '../common/build/build.rs'
edition = '2021'
license = 'GPL-3.0'
name = 'ton_vm'
version = '2.2.26'

[dependencies]
anyhow = '1.0'
hex = '0.4'
log = '0.4'
num = '0.4'
num-traits = '0.2'
thiserror = '1.0'
ton_block = { path = '../block' }
ton_api = { path = '../tl/ton_api' }

[dev-dependencies]
criterion = '0.4'
env_logger = '0.11'
libloading = '0.6'
log4rs = '1.2'
pretty_assertions = '1.3'
rand = '0.8'
serde_json = '1.0.132'
ton_assembler = { path = '../assembler' }

[target.'cfg(unix)'.dev-dependencies]
pprof = { features = [ 'criterion', 'flamegraph' ], version = '0.14' }

[features]
ci_run = [  ]
fift_check = [  ]
log_file = [  ]
verbose = [  ]

[[bench]]
harness = false
name = 'benchmarks'

[lib]
bench = false
