[package]
name = "control-client"
version = "0.5.1"
edition = "2024"
license = 'GPL-3.0'

[dependencies]
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = "1.0.145"
anyhow = "1.0"
async-trait = "0.1"
tracing = "0.1"
adnl = { features = ["client"], path = "../../adnl" }
ton_block = { path = "../../block" }
ton_api = { path = "../../tl/ton_api" }
common = { path = "../common" }
hex = "0.4.3"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
