[package]
name = "elections"
version = "0.4.0"
edition = "2024"
license = 'GPL-3.0'

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
tracing = "0.1"
tokio = { version = "1.40", features = ["full"] }
hex = { version = "0.4.3", features = ["serde"] }
ton-http-api-client = { path = "../ton-http-api-client" }
control-client = { path = "../control-client" }
adnl = { version = "0.11.38", path = "../../adnl" }
ton_block = { path = "../../block" }
common = { path = "../common" }
base64 = "0.22.1"
serde_json = "1.0.145"
serde = "1.0.228"
contracts = { path = "../contracts" }
secrets-vault = { path = '../../secrets-vault', default-features = false, features = [
    "file-storage-json",
    "hashicorp-storage",
] }

[dev-dependencies]
mockall = "0.13"
tokio = { version = "1.40", features = ["full", "test-util"] }
