[package]
build = '../../common/build/build.rs'
edition = '2021'
license = 'GPL-3.0'
name = 'consensus-common'
version = '0.2.0'

[dependencies]
anyhow = '1.0'
async-trait = '0.1'
chrono = '0.4'
crossbeam = '0.8'
crossbeam-channel = "0.5"
futures = '0.3'
hex = '0.4'
lazy_static = '1.4'
log = '0.4'
metrics = '0.24'
metrics-util = '0.20'
quanta = '0.12'
rand = '0.8'
regex = '1.10'
rocksdb = '0.23'
spin = '0.7'
tokio = { features = [ 'rt-multi-thread' ], version = '1.40' }
adnl = { features = [ 'node' ], path = '../../adnl' }
ton_block = { path = '../../block' }
storage = { path = '../storage' }
ton_api = { path = '../../tl/ton_api' }
external-ip = { version = '6.0', optional = true }
serde_json = { version = '1.0', optional = true }
tokio-util = { version = '0.7', optional = true }
secrets-vault = { path = '../../secrets-vault', default-features = false, features = [
    "file-storage-json",
    "hashicorp-storage",
] }

[dev-dependencies]
log4rs = { features = [ 'rolling_file_appender' ], version = '1.3' }
pretty_assertions = '1.3'
env_logger = '0.11'
external-ip = '6.0'
serde_json = '1.0'
tokio-util = '0.7'

[features]
default = [ 'telemetry' ]
telemetry = [ 'adnl/telemetry', 'storage/telemetry' ]
export_key = [ 'ton_block/export_key' ]
test-utils = [ 'external-ip', 'serde_json', 'tokio-util' ]

[[test]]
name = "test_adnl_overlay"
required-features = [ "test-utils" ]
