[package]
name = "compat_test"
version = "0.1.0"
edition = "2021"
description = "Cross-implementation compatibility tests for ADNL/overlay"
publish = false

[features]
default = []
telemetry = ["adnl/telemetry"]

[dependencies]
adnl = { path = "../../../adnl" }
ton_api = { path = "../../../tl/ton_api" }
ton_block = { path = "../../../block" }
consensus-common = { path = "../../consensus-common" }

tokio = { version = "1", features = ["full", "process", "io-util"] }
tokio-util = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
hex = "0.4"
rand = "0.8"
log = "0.4"
env_logger = "0.11"
thiserror = "1"
async-trait = "0.1"
anyhow = "1"

[dev-dependencies]
tokio-test = "0.4"

[[test]]
name = "test_overlay_id"
path = "tests/test_overlay_id.rs"

[[test]]
name = "test_broadcast"
path = "tests/test_broadcast.rs"

[[test]]
name = "test_public_overlay"
path = "tests/test_public_overlay.rs"

[[test]]
name = "test_broadcast_validation"
path = "tests/test_broadcast_validation.rs"

[[test]]
name = "test_overlay_message"
path = "tests/test_overlay_message.rs"

[[test]]
name = "test_boc_compression"
path = "tests/test_boc_compression.rs"

[[test]]
name = "test_candidate_id_to_sign"
path = "tests/test_candidate_id_to_sign.rs"

[[test]]
name = "test_fec_relay"
path = "tests/test_fec_relay.rs"

[[test]]
name = "test_twostep_fec_relay"
path = "tests/test_twostep_fec_relay.rs"

[[test]]
name = "test_rldp_query"
path = "tests/test_rldp_query.rs"

[[test]]
name = "test_quic_transport"
path = "tests/test_quic_transport.rs"

[[test]]
name = "test_quic_overlay"
path = "tests/test_quic_overlay.rs"

[[test]]
name = "test_raptorq"
path = "tests/test_raptorq.rs"

[[test]]
name = "test_block_sync_overlay_id"
path = "tests/test_block_sync_overlay_id.rs"

[[test]]
name = "test_simplex_config_v2_wire"
path = "tests/test_simplex_config_v2_wire.rs"
